Не работает обновление и удаление комментов с фильтрацией