@@ -9,12 +9,15 @@ import ru.skypro.homework.dto.user.AuthUserDTO;
 import ru.skypro.homework.entity.User;
 
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Optional;
 import java.util.Set;
 
 @Component
 @RequiredArgsConstructor
-public  class MyUserDetails implements UserDetails {
+public class MyUserDetails implements UserDetails {
     private final AuthUserDTO authUser;
+
     @Override
     public String getPassword() {
         return authUser.getPassword();
@@ -25,16 +28,23 @@ public  class MyUserDetails implements UserDetails {
         return authUser.getUsername();
     }
 
-/**
-Метод {@link #getAuthorities()} возвращает коллекцию объектов, реализующих интерфейс
- {@link GrantedAuthority} ,
-которые представляют собой разрешения пользователя.
-Конкретно здесь метод возвращает коллекцию из одного объекта  {@link SimpleGrantedAuthority}.
-Метод позволяет получить список разрешений, которые имеет пользователь в системе.
- */
+    /**
+     * Метод {@link #getAuthorities()} возвращает коллекцию объектов, реализующих интерфейс
+     * {@link GrantedAuthority} ,
+     * которые представляют собой разрешения пользователя.
+     * Конкретно здесь метод возвращает коллекцию из одного объекта  {@link SimpleGrantedAuthority}.
+     * Метод позволяет получить список разрешений, которые имеет пользователь в системе.
+     */
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Set.of(new SimpleGrantedAuthority("ROLE_" + authUser.getRole().name()));
+
+        return Optional.ofNullable(authUser)
+                .map(AuthUserDTO::getRole)
+                .map(role -> "ROLE_" + role)
+                .map(SimpleGrantedAuthority::new)
+                .map(Collections::singleton)
+                .orElse(Collections.emptySet());
+//                Set.of(new SimpleGrantedAuthority("ROLE_" + authUser.getRole().name()));
     }
 
     @Override
